--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1746,6 +1746,7 @@
     <Compile Include="Plugin\HotFixes\198_MigrationRollupsForV17_0_6.cs" />
     <Compile Include="Plugin\HotFixes\197_MigrationRollupsForV17_0_5.cs" />
     <Compile Include="Plugin\HotFixes\226_UpdateIndexesForV16_8.cs" />
+    <Compile Include="Plugin\HotFixes\238_ChatSharedChannelDefaultGroupRole.cs" />
     <Compile Include="Plugin\HotFixes\237_ChatAdminImprovements.cs" />
     <Compile Include="Plugin\HotFixes\236_MigrationRollupsForV17_1_0.cs" />
     <Compile Include="Plugin\HotFixes\235_AddChatConfigurationAdminUI.cs" />
