--- a/Rock.Blocks/Rock.Blocks.csproj
+++ b/Rock.Blocks/Rock.Blocks.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Finance\FinancialPersonSavedAccountDetail.cs" />
     <Compile Include="Mobile\CheckIn\CheckIn.cs" />
     <Compile Include="Security\Oidc\AuthClientDetail.cs" />
+    <Compile Include="Security\LoginHistory.cs" />
     <Compile Include="Tv\AppleTvPageList.cs" />
     <Compile Include="Cms\PageList.cs" />
     <Compile Include="Cms\PageShortLinkClickList.cs" />
