--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -2475,6 +2475,7 @@
     <Compile Include="Utility\ContentLibraryApi\ContentLibraryApiMetadataBox.cs" />
     <Compile Include="Utility\ContentLibraryApi\ContentLibraryApiResult.cs" />
     <Compile Include="Utility\ContentLibraryApi\IContentLibraryApi.cs" />
+    <Compile Include="Utility\EntityReferenceEqualityComparer.cs" />
     <Compile Include="Utility\Enums\PrayerRequestOrder.cs" />
     <Compile Include="Utility\Enums\RockPlatform.cs" />
     <Compile Include="Utility\Enums\TimePeriodOfDay.cs" />
