- (Communication) Added a new Version column to Communication Templates to support future updates tied to template versions. Also updated the recipient details procedure used by the Obsidian Communication Entry Wizard to improve how recipient info is handled in upcoming features.

--- a/Rock.Enums/Rock.Enums.csproj
+++ b/Rock.Enums/Rock.Enums.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Communication\Chat\ChatRole.cs" />
     <Compile Include="Communication\Chat\ChatSyncType.cs" />
     <Compile Include="Communication\CommunicationMessageFilter.cs" />
+    <Compile Include="Communication\CommunicationTemplateVersion.cs" />
     <Compile Include="Communication\UnsubscribeLevel.cs" />
     <Compile Include="Communication\CommunicationRecipientStatus.cs" />
     <Compile Include="Communication\CommunicationStatus.cs" />
