--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -68,6 +68,10 @@
     <Compile Include="Migrations\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202504021715459_AddVersionToCommunicationTemplateAndFixRecipientDetailsSP.cs" />
+    <Compile Include="Migrations\202504021715459_AddVersionToCommunicationTemplateAndFixRecipientDetailsSP.Designer.cs">
+      <DependentUpon>202504021715459_AddVersionToCommunicationTemplateAndFixRecipientDetailsSP.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503052051200_CodeGenerated_20250305.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503052051200_CodeGenerated_20250305.designer.cs">
       <DependentUpon>202503052051200_CodeGenerated_20250305.cs</DependentUpon>
@@ -2556,6 +2560,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202504021715459_AddVersionToCommunicationTemplateAndFixRecipientDetailsSP.resx">
+      <DependentUpon>202504021715459_AddVersionToCommunicationTemplateAndFixRecipientDetailsSP.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503052051200_CodeGenerated_20250305.resx">
       <DependentUpon>202503052051200_CodeGenerated_20250305.cs</DependentUpon>
