+ (Check-in) Add two new Kiosk Device settings to control registration mode in next-gen check-in. There are now individual controls for adding families and editing existing families.

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Migrations\202504021715459_AddVersionToCommunicationTemplateAndFixRecipientDetailsSP.Designer.cs">
       <DependentUpon>202504021715459_AddVersionToCommunicationTemplateAndFixRecipientDetailsSP.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202504022257120_AddNextGenKioskRegistrationAttributes.cs" />
+    <Compile Include="Migrations\202504022257120_AddNextGenKioskRegistrationAttributes.Designer.cs">
+      <DependentUpon>202504022257120_AddNextGenKioskRegistrationAttributes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503052051200_CodeGenerated_20250305.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503052051200_CodeGenerated_20250305.designer.cs">
       <DependentUpon>202503052051200_CodeGenerated_20250305.cs</DependentUpon>
@@ -2563,6 +2567,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202504021715459_AddVersionToCommunicationTemplateAndFixRecipientDetailsSP.resx">
       <DependentUpon>202504021715459_AddVersionToCommunicationTemplateAndFixRecipientDetailsSP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202504022257120_AddNextGenKioskRegistrationAttributes.resx">
+      <DependentUpon>202504022257120_AddNextGenKioskRegistrationAttributes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503052051200_CodeGenerated_20250305.resx">
       <DependentUpon>202503052051200_CodeGenerated_20250305.cs</DependentUpon>
