+ (Workflow) Added preview version of new Obsidian Workflow Entry block that can be added to new pages for testing.

--- a/Rock.Enums/Rock.Enums.csproj
+++ b/Rock.Enums/Rock.Enums.csproj
@@ -242,8 +242,10 @@
     <Compile Include="Security\LoginFailureReason.cs" />
     <Compile Include="WebFarm\LogSeverity.cs" />
     <Compile Include="WebFarm\LogType.cs" />
+    <Compile Include="Workflow\InteractiveActionContinueMode.cs" />
     <Compile Include="Workflow\WorkflowActionFormShowHideOption.cs" />
     <Compile Include="Workflow\WorkflowActionFormPersonEntryOption.cs" />
+    <Compile Include="Workflow\InteractiveMessageType.cs" />
     <Compile Include="Workflow\WorkflowLoggingLevel.cs" />
     <Compile Include="Workflow\WorkflowTriggerType.cs" />
     <Compile Include="Workflow\WorkflowTriggerValueChangeType.cs" />
