--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -76,6 +76,10 @@
     <Compile Include="Migrations\202504022257120_AddNextGenKioskRegistrationAttributes.Designer.cs">
       <DependentUpon>202504022257120_AddNextGenKioskRegistrationAttributes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202504031939385_AddPaymentEntryWorkflowAction.cs" />
+    <Compile Include="Migrations\202504031939385_AddPaymentEntryWorkflowAction.Designer.cs">
+      <DependentUpon>202504031939385_AddPaymentEntryWorkflowAction.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503052051200_CodeGenerated_20250305.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503052051200_CodeGenerated_20250305.designer.cs">
       <DependentUpon>202503052051200_CodeGenerated_20250305.cs</DependentUpon>
@@ -2570,6 +2574,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202504022257120_AddNextGenKioskRegistrationAttributes.resx">
       <DependentUpon>202504022257120_AddNextGenKioskRegistrationAttributes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202504031939385_AddPaymentEntryWorkflowAction.resx">
+      <DependentUpon>202504031939385_AddPaymentEntryWorkflowAction.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503052051200_CodeGenerated_20250305.resx">
       <DependentUpon>202503052051200_CodeGenerated_20250305.cs</DependentUpon>
