--- a/Rock.JavaScript.EditorJs/package.json
+++ b/Rock.JavaScript.EditorJs/package.json
@@ -38,6 +38,7 @@
     "@editorjs/quote": "^2.5.0",
     "@editorjs/raw": "^2.4.0",
     "@editorjs/warning": "^1.3.0",
+    "editorjs-alert": "^1.1.4",
     "editorjs-drag-drop": "^1.1.13",
     "editorjs-hyperlink": "^1.0.6",
     "uuid": "^9.0.0"
