- Enabled skipLibCheck to improve TypeScript build performance.

--- a/Rock.JavaScript.Obsidian.Blocks/tsconfig.base.json
+++ b/Rock.JavaScript.Obsidian.Blocks/tsconfig.base.json
@@ -11,6 +11,7 @@
     "removeComments": true,
     "allowUnreachableCode": false,
     "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "target": "ES2016",
     "module": "ESNext",
