--- a/Rock.JavaScript.Obsidian/Framework/tsconfig.base.json
+++ b/Rock.JavaScript.Obsidian/Framework/tsconfig.base.json
@@ -10,6 +10,7 @@
     "removeComments": false,
     "allowUnreachableCode": false,
     "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "target": "ES2016",
     "module": "ESNext",
