- Added new identifiers to Campus and Location to associate them to Bluetooth beacons. Added new RootGroupTypeId to AttendanceOccurrence to help with reporting.

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -64,6 +64,10 @@
     <Compile Include="..\Rock.Version\AssemblySharedInfo.cs">
       <Link>AssemblySharedInfo.cs</Link>
     </Compile>
+    <Compile Include="Migrations\202504071505457_AddBluetoothBeaconIdentifiers.cs" />
+    <Compile Include="Migrations\202504071505457_AddBluetoothBeaconIdentifiers.Designer.cs">
+      <DependentUpon>202504071505457_AddBluetoothBeaconIdentifiers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
@@ -2566,6 +2570,9 @@
     <Compile Include="SqlServerTypes\Loader.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Migrations\202504071505457_AddBluetoothBeaconIdentifiers.resx">
+      <DependentUpon>202504071505457_AddBluetoothBeaconIdentifiers.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
     </EmbeddedResource>
