- Added unit tests for new GroupTypeCache.GetRootGroupTypes() method.

--- a/Rock.Tests/Rock.Tests.csproj
+++ b/Rock.Tests/Rock.Tests.csproj
@@ -326,6 +326,7 @@
     <Compile Include="Utility\TimeIntervalTests.cs" />
     <Compile Include="Utility\MethodRetryTests.cs" />
     <Compile Include="Utility\WebRequestHelperTests.cs" />
+    <Compile Include="Web\Cache\GroupTypeCacheTests.cs" />
     <Compile Include="Web\UI\Controls\KeyValueListTests.cs" />
     <Compile Include="Web\Cache\PageShortLinkCacheTests.cs" />
   </ItemGroup>
