--- a/Rock.Rest/Rock.Rest.csproj
+++ b/Rock.Rest/Rock.Rest.csproj
@@ -166,6 +166,7 @@
     </Compile>
     <Compile Include="ApiController.cs" />
     <Compile Include="ApiControllerBase.cs" />
+    <Compile Include="Controllers\AiController.cs" />
     <Compile Include="Controllers\CodeGenerated\AdaptiveMessageAdaptationsController.CodeGenerated.cs" />
     <Compile Include="Controllers\CodeGenerated\AdaptiveMessageAdaptationSegmentsController.CodeGenerated.cs" />
     <Compile Include="Controllers\CodeGenerated\AdaptiveMessageCategoriesController.CodeGenerated.cs" />
